[tool.poetry]
name = "a2c_is_a_special_case_of_ppo"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
stable-baselines3 = {git = "https://github.com/vwxyzjn/stable-baselines3.git", rev = "ppo-configure-normalize_advantage"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
